# claude-backlog

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  README.md  plugin.json  pyproject.toml
.claude-plugin/: plugin.json
agents/: taskmaster.md
commands/: backlog-web.md  backlog.md  browser.md  draft.md  task.md
hooks/: backlog-status.py  task-completion-check.py
scripts/: dedupe_collisions.py  fractal_fk.py  mcp_external_validator.py  mcp_server.py
skills/backlog-master/: SKILL.md
skills/backlog-master/subskills/: task-browser.md  task-draft.md  task-linker.md  task-planner.md  task-triage.md  task-writer.md
src/claude_backlog/: __init__.py  dod.py  errors.py  io.py  milestone.py  schema.py  workflow.py
src/claude_backlog/web/: __init__.py  __main__.py  accessor.py  mutations.py  server.py
src/claude_backlog/web/static/: app.js  index.html  style.css
tests/: conftest.py  test_dedupe_collisions.py  test_dod.py  test_fractal_fk.py  test_io.py  test_mutations.py  test_schema.py  test_schema_persona.py  test_smoke.py  test_web_smoke.py
workflows/: overview.md
