[project]
name = "claude-backlog"
version = "0.1.0"
description = "Milestone-linked task management with MCP server"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_backlog"]

[tool.hatch.build.targets.wheel.sources]
"src/claude_backlog" = "claude_backlog"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
