[project]
name = "claude-backlog"
version = "0.2.6"
description = "Milestone-linked task management with MCP server + claude-webui satellite"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    # Phase 2 of task-441: claude-backlog is the first migrated satellite of
    # the claude-webui Surfacing-cluster shell. Web UI lives entirely under
    # claude_webui.WebuiKernel; this plugin supplies a BacklogAccessor.
    "claude-webui",
    # Real-time push fast-path (R3 of task-447 follow-up). Linux only;
    # claude_webui.events falls back to mtime polling when absent or on
    # non-Linux platforms. Listed here so the satellite gets ~50ms latency
    # by default on Linux without operator action.
    "inotify_simple>=1.3; sys_platform == 'linux'",
]

[tool.uv.sources]
claude-webui = { path = "../claude-webui", editable = true }

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_backlog"]

[tool.hatch.build.targets.wheel.sources]
"src/claude_backlog" = "claude_backlog"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
